feat(runtime): add bwrap containerization and host tool management

--- a/crates/repx-executor/Cargo.toml
+++ b/crates/repx-executor/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { workspace = true }
 shellexpand = { workspace = true }
 nix = { workspace = true, features = ["fs"] }
 tempfile = { workspace = true }
+walkdir = { workspace = true }
