--- a/crates/repx-tui/Cargo.toml
+++ b/crates/repx-tui/Cargo.toml
@@ -24,3 +24,4 @@ fs-err = { workspace = true }
 toml = { workspace = true }
 shellexpand = { workspace = true }
 num_cpus = { workspace = true }
+arboard = { version = "3.4", features = ["wayland-data-control"] }
