--- a/crates/repx-executor/Cargo.toml
+++ b/crates/repx-executor/Cargo.toml
@@ -12,3 +12,5 @@ shellexpand = { workspace = true }
 nix = { workspace = true, features = ["fs"] }
 tempfile = { workspace = true }
 walkdir = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
