feat(ci): add static analysis and portability checks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           - e2e-local
           - e2e-remote-local
           - e2e-remote-slurm
+          - static-analysis
+          - foreign-distro-compat
           - fast-checks
     steps:
       - uses: actions/checkout@v4
